[tool.poetry]
name = "ane-llama"
version = "0.1.0"
description = "Llama port for Apple's Neural Engine"
authors = ["Miguel Freire <miguelist20@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.4"
torch = "1.11.0"
ane-transformers = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
